<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_button"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/add_plus_button"
            android:title="@string/menu_crear" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/rubbish_bin_delete_button"
            android:title="@string/menu_eliminar" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/round_info_button"
            android:title="@string/menu_creditos" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/create_new_pencil_button"
                android:title="@string/menu_modificar" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/visibility_button"
                android:title="@string/menu_listar" />
        </menu>
    </item>

</menu>
