<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/inputFechaIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_fechaIngreso"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputHabitat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_habitat"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputAlimentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_alimentacion"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/id_txtFechaIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_fechaIngreso" />

        <TextView
            android:id="@+id/id_txtAlimentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_alimentacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/is_txtHabitat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_habitat" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/id_txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_nombre" />

        <EditText
            android:id="@+id/inputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/s_nombre"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/id_txtSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_sexo" />

        <Spinner
            android:id="@+id/spSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sx" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_guardar" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_limpiar" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_crear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/s_nuevo_animal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_crear">

        <TextView
            android:id="@+id/id_txtCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputId"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/id_txtClasificador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_clasificador" />

        <Spinner
            android:id="@+id/spClaficacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/opciones" />

        <TextView
            android:id="@+id/id_txtEspecie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_especie" />

        <Spinner
            android:id="@+id/spEspecie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/o0" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>